# hispixel

./: .gitignore  GEMINI.md  Makefile.am  README.md  config-dev  config.3d  configure.ac  run.sh
config/: config  hispixel.conf
debian/: changelog  control  rules
examples/: hispixel-Catppuccin
m4/: ax_boost_base.m4  ax_boost_iostreams.m4
scripts/: README  env.sh  his-dump.sh  his-feed.sh  his-focus.sh  his-latest.sh  his-less.sh  his-new.sh  his-rename.sh  hispixel  hispixel.desktop  list-fonts.py
share/: README  hispixel.desktop
src/: Makefile.am  anytypemap.h  colormanager.cc  colormanager.h  com.hispixel.GDBUS.xml  config.cc  config.h  config.hxx  dbushandler.cc  dbushandler.h  dbushelper.h  envfactory.h  error.h  errorcodes.h  hisbus.c  hisbus.h  hispixelapp.cc  hispixelapp.h  keyevent.cc  keyevent.h  main.cc  notes.txt  parser.h  parslet.h  regevent.h  tabs.cc  tabs.h  tconfig.cc  tconfig.h  test.cc  utils.cc  utils.h  valuecast.h
src/gtest/: Makefile.am
src/gtest/src/: gtest-death-test.cc
